--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 107
-        versionName "6.2.0"
+        versionCode 109
+        versionName "7.0.01beta1"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
