--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,7 +160,7 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
-    implementation 'androidx.biometric:biometric:1.0.0-alpha04'
+    implementation 'androidx.biometric:biometric:1.0.0-beta01'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -212,7 +212,7 @@ dependencies {
     implementation 'me.zhanghai.android.effortlesspermissions:library:1.1.0'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'com.github.wooplr:Spotlight:1.3'
-    implementation('com.github.mario:chatkit:a7c4f3c9ea', {
+    implementation('com.github.mario:chatkit:a183142049', {
         exclude group: 'com.facebook.fresco'
     })
 
