--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,6 +137,7 @@ android {
 
 ext {
     workVersion = "1.0.1"
+    koin_version = "2.0.1"
 }
 
 
@@ -149,6 +150,17 @@ configurations.all {
 
 dependencies {
     implementation fileTree(include: ['*'], dir: 'libs')
+
+    // Koin for Android
+    implementation "org.koin:koin-android:$koin_version"
+    // Koin AndroidX Scope features
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    // Koin AndroidX ViewModel features
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    // Koin AndroidX Experimental features
+    implementation "org.koin:koin-androidx-ext:$koin_version"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0-beta01'
