--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ android {
                 ]
             }
         }
+
+        dataBinding {
+            enabled = true
+        }
     }
 
     dexOptions {
@@ -136,8 +140,9 @@ android {
 }
 
 ext {
-    workVersion = "1.0.1"
-    koin_version = "2.0.1"
+    work_version = "1.0.1"
+    koin_version = "2.1.0-alpha-1"
+    lifecycle_version = "2.1.0"
 }
 
 
@@ -161,6 +166,25 @@ dependencies {
     implementation "org.koin:koin-androidx-ext:$koin_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    implementation "com.github.stateless4j:stateless4j:2.6.0"
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01"
+
+    // optional - ReactiveStreams support for LiveData
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version" // For Kotlin use lifecycle-reactivestreams-ktx
+
+    // optional - Test helpers for LiveData
+    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0-beta01'
@@ -168,10 +192,10 @@ dependencies {
     implementation 'com.github.vanniktech:Emoji:0.6.0'
     implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.0.0'
     implementation 'org.michaelevans.colorart:library:0.0.3'
-    implementation "android.arch.work:work-runtime:${workVersion}"
-    implementation "android.arch.work:work-rxjava2:${workVersion}"
+    implementation "android.arch.work:work-runtime:${work_version}"
+    implementation "android.arch.work:work-rxjava2:${work_version}"
     implementation 'com.google.android:flexbox:1.1.0'
-    androidTestImplementation "android.arch.work:work-testing:${workVersion}"
+    androidTestImplementation "android.arch.work:work-testing:${work_version}"
     implementation ('com.gitlab.bitfireAT:dav4jvm:f2078bc846', {
         exclude group: 'org.ogce', module: 'xpp3'	// Android comes with its own XmlPullParser
     })
@@ -179,7 +203,7 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
-    implementation 'androidx.biometric:biometric:1.0.0-beta02'
+    implementation 'androidx.biometric:biometric:1.0.0-rc01'
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -192,6 +216,7 @@ dependencies {
     implementation 'com.bluelinelabs:conductor-archlifecycle:3.0.0-rc2'
     implementation 'com.bluelinelabs:conductor-rxlifecycle2:3.0.0-rc2'
     implementation 'com.bluelinelabs:conductor-autodispose:3.0.0-rc2'
+    implementation "com.github.miquelbeltran:conductor-viewmodel:1.0.3"
 
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.2.2'
@@ -226,6 +251,7 @@ dependencies {
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
     implementation 'eu.davidea:flexible-adapter:5.1.0'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0'
+    implementation 'eu.davidea:flexible-adapter-livedata:1.0.0-b3'
     implementation 'org.webrtc:google-webrtc:1.0.23295'
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     implementation 'com.yarolegovich:lovelyinput:1.0.9'
