--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@
 buildscript {
 
     ext {
-        kotlinVersion = '1.3.50'
+        kotlin_version = '1.3.50'
     }
 
     repositories {
@@ -34,7 +34,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
         classpath "io.realm:realm-gradle-plugin:6.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
