--- a/app/build.gradle
+++ b/app/build.gradle
@@ -292,9 +292,7 @@ dependencies {
   implementation 'me.zhanghai.android.effortlesspermissions:library:1.1.0'
   implementation 'org.apache.commons:commons-lang3:3.9'
   implementation 'com.github.wooplr:Spotlight:1.3'
-  implementation('com.github.mario:chatkit:c6a6176729', {
-    exclude group: 'com.facebook.fresco'
-  })
+  implementation'com.github.mario:chatkit:d32a7372bb'
 
   implementation 'com.github.mario.fresco:fresco:111'
   implementation 'com.github.mario.fresco:animated-webp:111'
