--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,7 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/nc_app_name"
+            android:label="@string/nc_app_label"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
