--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-XX:MaxHeapSize\=4096m -Xmx4096m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m
 
 android.useAndroidX=true
 android.enableJetifier=true
