--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.3.50'
+        kotlin_version = '1.3.61'
     }
 
     repositories {
@@ -33,9 +33,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
-        classpath "io.realm:realm-gradle-plugin:6.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -44,7 +43,7 @@ buildscript {
 
 configurations.all {
     // check for updates every build
-    resolutionStrategy.cacheChangingModulesFor 3600, 'seconds'
+    //resolutionStrategy.cacheChangingModulesFor 3600, 'seconds'
 }
 
 allprojects {
