--- a/app/build.gradle
+++ b/app/build.gradle
@@ -172,6 +172,7 @@ configurations.all {
 dependencies {
   implementation fileTree(include: ['*'], dir: 'libs')
 
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
   // Koin for Android
   implementation "org.koin:koin-android:$koin_version"
   // Koin AndroidX Scope features
@@ -264,11 +265,6 @@ dependencies {
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.0.pr1'
   kapt 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
-  implementation 'com.google.dagger:dagger:2.24'
-  kapt 'com.google.dagger:dagger-compiler:2.24'
-  kapt 'com.google.dagger:dagger-android-processor:2.24'
-  implementation 'com.github.lukaspili.autodagger2:autodagger2:1.1'
-  kapt 'com.github.lukaspili.autodagger2:autodagger2-compiler:1.1'
   compileOnly 'javax.annotation:jsr250-api:1.0'
   // Android only
   implementation 'org.greenrobot:eventbus:3.1.1'
