--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ apply plugin: 'findbugs'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlinx-serialization'
 
 def taskRequest = getGradle().getStartParameter().getTaskRequests().toString()
 if (taskRequest.contains("Gplay") || taskRequest.contains("findbugs") ||
@@ -160,7 +161,7 @@ ext {
   koin_version = "2.1.0-alpha-1"
   lifecycle_version = "2.2.0-rc01"
   coil_version = "0.8.0"
-  room_version = "2.2.2"
+  room_version = "2.2.3"
 }
 
 configurations.all {
@@ -173,6 +174,7 @@ dependencies {
   implementation fileTree(include: ['*'], dir: 'libs')
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+  implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0" // JVM dependency
   // Koin for Android
   implementation "org.koin:koin-android:$koin_version"
   // Koin AndroidX Scope features
@@ -227,8 +229,8 @@ dependencies {
   androidTestImplementation "androidx.work:work-testing:$work_version"
 
   implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'com.google.android.material:material:1.2.0-alpha02'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+  implementation 'com.google.android.material:material:1.2.0-alpha03'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
   implementation 'com.github.vanniktech:Emoji:0.6.0'
   implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.0.0'
   implementation 'org.michaelevans.colorart:library:0.0.3'
