--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,7 +160,7 @@ ext {
   work_version = "2.3.0-alpha02"
   koin_version = "2.1.0-alpha-1"
   lifecycle_version = "2.2.0-rc01"
-  coil_version = "0.8.0"
+  coil_version = "0.9.0"
   room_version = "2.2.3"
 }
 
@@ -294,10 +294,10 @@ dependencies {
   implementation 'com.github.wooplr:Spotlight:1.3'
   implementation'com.github.mario:chatkit:d32a7372bb'
 
-  /*implementation "io.coil-kt:coil:${coil_version}"
+  implementation "io.coil-kt:coil:${coil_version}"
   implementation "io.coil-kt:coil-gif:${coil_version}"
-  implementation "io.coil-kt:coil-svg:${coil_version}"*/
-  implementation 'com.github.coil-kt:coil:9769e11f19'
+  implementation "io.coil-kt:coil-svg:${coil_version}"
+  //implementation 'com.github.coil-kt:coil:9769e11f19'
 
   implementation 'com.github.natario1:Autocomplete:v1.1.0'
 
