--- a/app/build.gradle
+++ b/app/build.gradle
@@ -191,7 +191,6 @@ dependencies {
   implementation "com.github.stateless4j:stateless4j:2.6.0"
 
   // ViewModel and LiveData
-  implementation "androidx.core:core-ktx:1.1.0"
   implementation "androidx.sqlite:sqlite-ktx:2.0.1"
   implementation "androidx.collection:collection-ktx:1.1.0"
   implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
@@ -229,6 +228,8 @@ dependencies {
   androidTestImplementation "androidx.work:work-testing:$work_version"
 
   implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'androidx.core:core-ktx:1.2.0-rc01'
+  implementation 'androidx.sharetarget:sharetarget:1.0.0-rc01'
   implementation 'com.google.android.material:material:1.2.0-alpha03'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
   implementation 'com.github.vanniktech:Emoji:0.6.0'
