--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,8 @@ android {
     }
 
     release {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
