--- a/gradle.properties
+++ b/gradle.properties
@@ -29,12 +29,11 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m
+org.gradle.jvmargs=-Xms1024m -Xmx8000m
 
 android.useAndroidX=true
 android.enableJetifier=true
 
-# org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
