--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,9 +154,9 @@ android {
 }
 
 ext {
-  work_version = "2.3.0-alpha02"
+  work_version = '2.3.0-beta02'
   koin_version = "2.1.0-alpha-1"
-  lifecycle_version = "2.2.0-rc01"
+  lifecycle_version = '2.2.0-rc03'
   coil_version = "0.9.1"
   room_version = "2.2.3"
 }
@@ -257,12 +257,12 @@ dependencies {
   implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.3'
   implementation 'com.squareup.okhttp3:logging-interceptor:3.14.3'
 
-  implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+  implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
   implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
   implementation group: 'joda-time', name: 'joda-time', version: '2.10.3'
   implementation 'com.bluelinelabs:logansquare:1.3.7'
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.0.pr1'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.1'
   kapt 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
   compileOnly 'javax.annotation:jsr250-api:1.0'
@@ -277,8 +277,8 @@ dependencies {
   annotationProcessor "org.projectlombok:lombok:1.18.10"
   kapt "org.projectlombok:lombok:1.18.10"
 
-  implementation 'com.jakewharton:butterknife:10.2.0'
-  kapt 'com.jakewharton:butterknife-compiler:10.2.0'
+  implementation 'com.jakewharton:butterknife:10.2.1'
+  kapt 'com.jakewharton:butterknife-compiler:10.2.1'
   implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
   implementation 'eu.davidea:flexible-adapter:5.1.0'
   implementation 'eu.davidea:flexible-adapter-ui:1.0.0'
@@ -315,13 +315,13 @@ dependencies {
   implementation 'org.parceler:parceler-api:1.1.12'
   kapt 'org.parceler:parceler:1.1.12'
 
-  testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.13'
   testImplementation 'org.mockito:mockito-core:3.0.0'
   testImplementation 'org.powermock:powermock-core:2.0.2'
   testImplementation 'org.powermock:powermock-module-junit4:2.0.2'
   testImplementation 'org.powermock:powermock-api-mockito2:2.0.2'
 
-  androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0-alpha02', {
+  androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0-alpha03', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
   implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
