--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,9 +143,9 @@ configurations.all {
 
 dependencies {
     implementation fileTree(include: ['*'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha01'
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
     implementation 'com.github.vanniktech:Emoji:0.6.0'
     implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.0.0'
     implementation 'org.michaelevans.colorart:library:0.0.3'
@@ -159,10 +159,10 @@ dependencies {
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
 
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
-    implementation 'androidx.biometric:biometric:1.0.0-beta01'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation 'androidx.biometric:biometric:1.0.1'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
@@ -177,11 +177,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
 
     implementation 'com.bluelinelabs:logansquare:1.3.7'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.0.pr1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.1'
     kapt 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
 
     implementation 'com.google.dagger:dagger:2.24'
@@ -198,10 +198,10 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.1.12'
     kapt 'org.parceler:parceler:1.1.12'
     implementation 'net.orange-box.storebox:storebox-lib:1.4.0'
-    compileOnly 'org.projectlombok:lombok:1.18.8'
-    annotationProcessor "org.projectlombok:lombok:1.18.8"
-    implementation 'com.jakewharton:butterknife:10.2.0'
-    kapt 'com.jakewharton:butterknife-compiler:10.2.0'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor "org.projectlombok:lombok:1.18.10"
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    kapt 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
     implementation 'eu.davidea:flexible-adapter:5.1.0'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0'
@@ -240,7 +240,7 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.0'
     implementation 'com.afollestad.material-dialogs:lifecycle:3.1.0'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     testImplementation 'org.mockito:mockito-core:3.0.0'
     testImplementation 'org.powermock:powermock-core:2.0.2'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.2'
