--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,6 +159,8 @@ ext {
   lifecycle_version = '2.2.0-rc03'
   coil_version = "0.9.1"
   room_version = "2.2.3"
+  geckoviewChannel = "stable"
+  geckoviewVersion = "72.0.20200107212822"
 }
 
 configurations.all {
@@ -185,6 +187,7 @@ dependencies {
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+  implementation "org.mozilla.geckoview:geckoview:${geckoviewVersion}"
   implementation "com.github.stateless4j:stateless4j:2.6.0"
 
   // ViewModel and LiveData
