--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
         targetSdkVersion 29
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 126
-        versionName "8.0.0beta4"
+        versionCode 127
+        versionName "8.0.0"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
