Further improvements to contacts
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,7 @@
             android:name=".activities.MainActivity"
             android:label="@string/nc_app_label"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize|stateUnchanged">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
