Lots of progress on new notifications system
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,8 @@
         <service
             android:name="com.novoda.merlin.MerlinService"
             android:exported="false" />
+        <service android:name=".newarch.services.CallService"
+            android:exported="false"/>
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}"
