--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,11 +154,11 @@ android {
 }
 
 ext {
-  work_version = '2.3.0'
+  work_version = '2.3.3'
   koin_version = "2.1.0-alpha-1"
   lifecycle_version = '2.2.0'
-  coil_version = "0.9.1"
-  room_version = "2.2.3"
+  coil_version = "0.9.5"
+  room_version = "2.2.4"
 }
 
 configurations.all {
@@ -188,7 +188,7 @@ dependencies {
   implementation "com.github.stateless4j:stateless4j:2.6.0"
 
   // ViewModel and LiveData
-  implementation "androidx.sqlite:sqlite-ktx:2.0.1"
+  implementation "androidx.sqlite:sqlite-ktx:2.1.0"
   implementation "androidx.collection:collection-ktx:1.1.0"
   implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
   implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
@@ -225,9 +225,9 @@ dependencies {
   androidTestImplementation "androidx.work:work-testing:$work_version"
 
   implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'androidx.core:core-ktx:1.2.0-rc01'
+  implementation 'androidx.core:core-ktx:1.3.0-alpha02'
   implementation 'androidx.sharetarget:sharetarget:1.0.0-rc01'
-  implementation 'com.google.android.material:material:1.2.0-alpha04'
+  implementation 'com.google.android.material:material:1.2.0-alpha05'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
   implementation 'com.github.vanniktech:Emoji:0.6.0'
   implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.0.0'
@@ -244,7 +244,7 @@ dependencies {
   implementation 'androidx.multidex:multidex:2.0.1'
 
   implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-  implementation "io.reactivex.rxjava2:rxjava:2.2.11"
+  implementation "io.reactivex.rxjava2:rxjava:2.2.17"
 
   implementation 'com.bluelinelabs:conductor:3.0.0-rc2'
   implementation 'com.bluelinelabs:conductor-support:3.0.0-rc2'
