--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,7 +154,7 @@ android {
 }
 
 ext {
-  work_version = '2.3.3'
+  work_version = '2.3.4'
   koin_version = "2.1.4"
   lifecycle_version = '2.2.0'
   coil_version = "0.9.5"
@@ -224,10 +224,10 @@ dependencies {
   implementation "androidx.work:work-rxjava2:$work_version"
   androidTestImplementation "androidx.work:work-testing:$work_version"
 
-  implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'androidx.core:core-ktx:1.3.0-alpha02'
+  implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
+  implementation 'androidx.core:core-ktx:1.3.0-rc01'
   implementation 'androidx.sharetarget:sharetarget:1.0.0-rc01'
-  implementation 'com.google.android.material:material:1.2.0-alpha05'
+  implementation 'com.google.android.material:material:1.2.0-alpha06'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
   implementation 'com.github.vanniktech:Emoji:0.6.0'
   implementation group: 'androidx.emoji', name: 'emoji-bundled', version: '1.0.0'
