--- a/build.gradle
+++ b/build.gradle
@@ -32,13 +32,17 @@ buildscript {
             url 'https://jitpack.io'
         }
         maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+        maven {
             url 'https://maven.mozilla.org/maven2'
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath 'gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.5.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
