--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
         targetSdkVersion 28
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        versionCode 80001090 // 0-50=Alpha / 51-98=RC / 90-99=stable
-        versionName "8.0.10"
+        versionCode 80010000 // 0-50=Alpha / 51-98=RC / 90-99=stable
+        versionName "8.1.0 Alhpa 1"
 
         flavorDimensions "default"
         renderscriptTargetApi 19
