--- a/app/build.gradle
+++ b/app/build.gradle
@@ -242,6 +242,8 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.1.0'
     implementation 'com.afollestad.material-dialogs:lifecycle:3.1.0'
 
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.mockito:mockito-core:3.0.0'
     testImplementation 'org.powermock:powermock-core:2.0.2'
